# xtensor-fftw

./: .appveyor.yml  .gitignore  .releash.py  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor_install_fftw.ps1  environment.yml  postBuild  xtensor-fftw.pc.in  xtensor-fftwConfig.cmake.in
.github/workflows/: build.yml  main.yml
bench/: CMakeLists.txt  basic_interface.cpp  copyGBench.cmake.in  downloadGBench.cmake.in
cmake/Modules/findFFTW/: FindFFTW.cmake
include/xtensor-fftw/: basic.hpp  basic_double.hpp  basic_float.hpp  basic_long_double.hpp  basic_option.hpp  common.hpp  fft.hpp  helper.hpp  xtensor-fftw_config.hpp
notebooks/: intensely_edgy_cat.ipynb
test/: CMakeLists.txt  basic_interface.cpp  basic_interface.hpp  basic_interface_fft.cpp  basic_interface_hfft.cpp  basic_interface_rfft.cpp  c2c_1D.cpp  c2c_sp_1D.cpp  copyGTest.cmake.in  downloadGTest.cmake.in  examples.cpp  helper.cpp
